<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:edittextview="http://schemas.android.com/apk/res/com.tr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="#22292c" >

        <RelativeLayout
            android:id="@+id/quit_work_Rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="11dp" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/people_left_arrow"
                android:clickable="false"
                android:focusable="false" />
        </RelativeLayout>

        <TextView
            android:id="@+id/work_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/work_experience"
            android:textColor="#ffffff"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/finish_work_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:enabled="true"
            android:onClick="finish"
            android:padding="10dp"
            android:text="@string/_finish"
            android:textColor="#ffffff"
            android:textSize="13sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        

        <LinearLayout
            android:id="@+id/work_main_Ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f1f1f1"
                android:orientation="horizontal"
                android:padding="5dp" >
            </LinearLayout>

            <include layout="@layout/people_include_continueadd" />

            <LinearLayout
                android:id="@+id/work_Ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#f1f1f1"
                    android:orientation="horizontal"
                    android:padding="5dp" >
                </LinearLayout>

                <com.tr.ui.people.cread.view.MyEditTextView
                    android:id="@+id/data_work_Etv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    edittextview:isChoose="true"
                    edittextview:isReadOnly="true"
                    edittextview:text_label="@string/work_data" />

                <com.tr.ui.people.cread.view.MyEditTextView
                    android:id="@+id/unit_work_Etv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    edittextview:text_label="@string/work_company" />

                <com.tr.ui.people.cread.view.MyEditTextView
                    android:id="@+id/industry_work_Etv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    edittextview:isChoose="true"
                    edittextview:isReadOnly="true"
                    edittextview:text_label="@string/work_industry" />

                <com.tr.ui.people.cread.view.MyEditTextView
                    android:id="@+id/certifier_work_Etv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    edittextview:text_label="@string/work_certifier" />

                <com.tr.ui.people.cread.view.MyEditTextView
                    android:id="@+id/phone_work_Etv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    edittextview:edttext_inputtype="number"
                    edittextview:text_label="@string/work_certifierphone" />

                <com.tr.ui.people.cread.view.MyEditTextView
                    android:id="@+id/section_work_Etv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    edittextview:text_label="@string/work_department" />

                <com.tr.ui.people.cread.view.MyEditTextView
                    android:id="@+id/duty_work_Etv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    edittextview:text_label="@string/work_position" />

                <com.tr.ui.people.cread.view.MyEditTextView
                    android:id="@+id/colleague_work_Etv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    edittextview:text_label="@string/work_colleague" />
                <LinearLayout
                    android:id="@+id/custom_main1_Ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:orientation="vertical" />

                <com.tr.ui.people.cread.view.MyEditTextView
                    android:id="@+id/custom_work_Etv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    edittextview:isAddMore="true"
                    edittextview:isReadOnly="true"
                    edittextview:text_label="@string/work_custom" />

                <RelativeLayout
                    android:id="@+id/work_experience_Rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/work_experience_Tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="14dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="14dp"
                        android:text="@string/work_experience_Tv"
                        android:textColor="#808080"
                        android:textSize="14sp" />

                    <CheckBox
                        android:id="@+id/work_experience_Cb"
                        android:layout_width="18.5dp"
	    				android:layout_height="17dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:clickable="false"
                        android:background="@drawable/people_checkbox"
                        android:button="@null"
                        android:checked="false"
                        android:layout_marginRight="10dp"
                        android:focusable="false" />
                    <!-- <RadioButton
			            android:id="@+id/work_experience_Cb"
			            android:layout_width="18.5dp"
			        	android:layout_height="17dp"
			            android:layout_alignParentRight="true"
			            android:layout_centerVertical="true"
			            android:button="@drawable/radiobutton_work_experience"
			            android:checked="false"
			            android:clickable="false"
			            android:focusable="false"
			            android:layout_marginRight="10dp"
			             /> -->

                    <View
                        android:id="@+id/underline"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_below="@id/work_experience_Tv"
                        android:background="#e3e3e3" />
                </RelativeLayout>

                <include layout="@layout/people_include_delete" />
            </LinearLayout>
        </LinearLayout>
        
    </ScrollView>
</LinearLayout>