<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/people_popbox"
    android:orientation="vertical" >
    
 <TextView
        android:id="@+id/alertdialog_delete_Tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="18.5dp"
        android:layout_marginTop="17.5dp"
        android:lineSpacingExtra="3dp"
        android:gravity="center"
        android:textColor="#1f1f1f"
        android:text="@string/dialog_text"
        android:textSize="14sp" />
	
	<View  
	     android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#e3e3e3"/>
	<LinearLayout 
	     android:layout_width="match_parent"
	     android:orientation="horizontal"
        android:layout_height="44dp">
	    <TextView 
	        android:id="@+id/alertdialog_delete_No"
	        android:layout_weight="1"
	        android:text="@string/str_cancel"
	        android:textColor="#1f1f1f"
			android:textSize="14sp"
	        android:gravity="center"
	         android:layout_width="match_parent"
        android:layout_height="match_parent"/>
	    <View 
	         android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:background="#e3e3e3"/>
	    <TextView 
	        android:id="@+id/alertdialog_delete_Yes"
	        android:layout_weight="1"
	        android:text="@string/str_ok"
			android:textColor="#1f1f1f"
			android:textSize="14sp"
	         android:gravity="center"
	         android:layout_width="match_parent"
        android:layout_height="match_parent"/>
	</LinearLayout>
</LinearLayout>
