<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_community_company"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/search_Text" >

        <TextView
            android:id="@+id/text_group_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/group_notice"
            android:textColor="@color/text_flow_address"
            android:textSize="12sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_line" />

    <RadioGroup
        android:id="@+id/group_notice"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal" >

        <!-- 开启 -->

        <RadioButton
            android:id="@+id/group_notice_open"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:button="@null"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/checkbox_style_circle"
            android:text="@string/open"
            android:textColor="@color/text_flow_content"
            android:textSize="14sp" />
        <!-- 无声 -->

        <RadioButton
            android:id="@+id/group_notice_silent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:button="@null"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/checkbox_style_circle"
            android:text="@string/silent"
            android:textColor="@color/text_flow_content"
            android:textSize="14sp" />
        <!-- 关闭 -->

        <RadioButton
            android:id="@+id/group_notice_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:button="@null"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/checkbox_style_circle"
            android:text="@string/close"
            android:textColor="@color/text_flow_content"
            android:textSize="14sp" />
    </RadioGroup>

</LinearLayout>